// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Home /> should match snapshot with a tournament 1`] = `
<div
  className="style__home-2dfZi"
>
  <Segment>
    <Grid
      basic="true"
      horizontal="true"
    >
      <GridRow>
        <GridColumn
          width={2}
        >
          <Button
            as="button"
            icon="chevron left"
            onClick={[Function]}
          />
        </GridColumn>
        <GridColumn
          width={12}
        >
          <Header
            size="large"
            textAlign="center"
          >
            Game Manager
          </Header>
        </GridColumn>
        <GridColumn
          width={2}
        />
      </GridRow>
    </Grid>
  </Segment>
  <SidebarPushable
    as={[Function]}
    basic={true}
    className="style__sidebar-pusher-PBx9e"
  >
    <Sidebar
      animation="overlay"
      className="style__sidebar-1wYym"
      direction="right"
      visible={true}
    >
      <Play
        tournament={true}
      />
    </Sidebar>
    <SidebarPusher>
      <Tournaments
        onSelect={[Function]}
      />
    </SidebarPusher>
  </SidebarPushable>
</div>
`;

exports[`<Home /> should match snapshot without a tournament 1`] = `
<div
  className="style__home-2dfZi"
>
  <Segment>
    <Grid
      basic="true"
      horizontal="true"
    >
      <GridRow>
        <GridColumn
          width={2}
        />
        <GridColumn
          width={12}
        >
          <Header
            size="large"
            textAlign="center"
          >
            Game Manager
          </Header>
        </GridColumn>
        <GridColumn
          width={2}
        />
      </GridRow>
    </Grid>
  </Segment>
  <SidebarPushable
    as={[Function]}
    basic={true}
    className="style__sidebar-pusher-PBx9e"
  >
    <Sidebar
      animation="overlay"
      className="style__sidebar-1wYym"
      direction="right"
      visible={false}
    >
      <Play
        tournament={false}
      />
    </Sidebar>
    <SidebarPusher>
      <Tournaments
        onSelect={[Function]}
      />
    </SidebarPusher>
  </SidebarPushable>
</div>
`;
